[package]
name = "uno_mux"
version = "0.1.0"
authors = ["John <me@johnbotr.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.1.0"
avr-device = {version = "0.3", features = ["atmega328p"]}

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "a20277873a8102998d5fd69743771bd8c0aa9423"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
